downgrade to java 1.8 (for research)